# climate-manager-lokris

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements-dev.txt
custom_components/climate_manager/: __init__.py  button.py  config_flow.py  const.py  context_tracker.py  coordinator.py  entity_base.py  manifest.json  number.py  seed.py  select.py  sensor.py  services.yaml  strings.json  switch.py  zone.py
custom_components/climate_manager/translations/: en.json  fr.json
custom_components/climate_manager/www/: climate-manager-card.js
docs/: architecture.md
scripts/: deploy.sh
tests/: conftest.py  test_boot_recovery.py  test_capabilities.py  test_cycle_history.py  test_cycle_started.py  test_override_debounce.py  test_pendulum.py  test_profiles.py  test_runtime_persistence.py  test_seed.py  test_system_direction.py  test_zone.py  test_zone_config_persist.py
